--- a/number-game-errors.html
+++ b/number-game-errors.html
@@ -42,7 +42,7 @@
 </body>
 
 <script>
-  let randomNumber = Math.floor(Math.random()) + 1;
+  let randomNumber = Math.floor(Math.random()*100);
 
   const guesses = document.querySelector('.guesses');
   const lastResult = document.querySelector('.lastResult');
